packages/app/web/css/ui.css
/* ... */
.repl-prompt {
    color: var(--color-text-02);
    margin-right: 0.375em;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    display: flex;
    align-items: center;
}
.repl-prompt .repl-selection {
    font-size: 80%;
    opacity: 0.6;
}
.repl-prompt .repl-selection.has-selection-true {
    margin-left: 1ex;
}
.repl-context {
    display: none;
    font-size: 0.75em;
    margin-right: 0.1875em;
}
repl .repl-block.using-custom-prompt .repl-prompt-righty > i {
    display: none;
}
.repl-prompt-righty > i {
    color: var(--color-brand-01);
    font-size: 1.125em;
}

/* repl right-hand decorations */
.repl-prompt-right-elements {
    display: flex;
    align-items: center;
    margin-left: 1em;
    flex: 0;
    white-space: nowrap;
}
.repl-prompt-right-elements .repl-prompt-right-element-icon {
    margin-left: 1ex;
    color: var(--color-ui-05);
    font-size: 1.5em;
    transition: all 300ms ease-in-out;
}
.repl-prompt-right-elements .repl-prompt-right-element-icon:hover {
    cursor: pointer;
    opacity: 1;
}
.repl-block.valid-response .repl-prompt-right-elements .repl-prompt-right-element-icon {
    color: var(--color-ok);
}
.repl-block.error .repl-prompt-right-elements .repl-prompt-right-element-icon {
    color: var(--color-error);
}
repl.sidecar-visible .repl-prompt-right-elements, .repl-active .repl-prompt-right-elements {
    opacity: 0;
    width: 0;
    padding: 0;
    margin: 0;
    /* important: keep height, otherwise when .repl-active goes away, the height of the repl-line line may change */
}

body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-prompt-lefty, body/*.sidecar-full-screen*/ repl .repl-prompt-lefty {
    display: none;
}
body/*:not(.sidecar-full-screen)*/ repl.sidecar-visible .repl-selection, body/*.sidecar-full-screen*/ repl .repl-selection {
    /* collapse the context and selection when the sidecar is visible */
    width: 0;
    min-width: 0;
    opacity: 0 !important;
    margin: 0 !important;
}
.repl-result, .repl input, .repl-input-like {
    font-size: 0.925em;
}
.repl input, .repl-input-like {
    font-weight: 500; /* make it a bit more substantial; IBM Plex Mono 400 is too light */
    color: var(--color-text-01);
    background: transparent;
    border: none;
    flex: 1;
    caret-color: var(--color-support-01);
}
.repl input:focus, .repl-input-like:focus {
    outline: none;
}
.repl-block.valid-response .ok, .green-text, .dragover .ok-text-on-dragover {
    opacity: 1 !important;
}
.repl-block.valid-response .oops, sidecar.rule-enabled-false .sidecar-header-icon, .repl-block.error .oops, .clickable.oops, .oops .oops-text-on-oops, .red-text {
    opacity: 1 !important;
    white-space: pre-wrap;
}
.header .clickable.oops {
    font-weight: 900;
}
.repl-block.valid-response div:not(.repl-result) > .ok-line,  .repl-block.valid-response > .oops {
    font-size: 0.875em;
}
.repl-block.valid-response .ok, .repl-block.valid-response > .oops {
    display: block;
}
.repl-block.valid-response .ok.inline-ok {
    display: inline;
}
.repl-block.valid-response .repl-result .ok {
    /* oof, sometimes the .ok is nested under a repl-result, which would
   result in a double 0.875em reduction */
    font-size: 1em;
}
.repl-block.valid-response .oops {
    /* oops output often times doesn't word wrap nicely on its own, e.g. help/usage; issue #396 */
    word-break: break-all;
}
.repl-input {
    align-items: center;
}
.repl-input, .repl-output {
    display: flex
}
.repl-output.result-vertical {
    flex-direction: column
}
.repl-block .whitespace {
    white-space: pre-wrap;
}
.repl-block.processing .repl-output, .repl-block.valid-response .repl-output {
    display: flex;
    align-items: flex-start;
}
.sidecar-visible .repl-block.processing .repl-output, .sidecar-visible .repl-block.valid-response .repl-output {
    align-items: stretch;
}
.repl-block.processing .repl-result-spinner-inner {
    animation: spin 750ms linear infinite;
    display: inline-block;
}
.repl-block.processing .repl-result-spinner-inner:after {
    content: '|';
}
.repl-result pre {
    /* invocation results */
    margin: 0;
}
.repl-result code {
    /* more invocation results */
    /* here, we override the highlight.js theme, when rendering in the repl */
    background: transparent;
    color: var(--color-text-01);
}
.fifty-fifty:first-child {
    max-width: calc(50% - 3em);
    margin-right: 3em;
}
.fifty-fifty:last-child {
    max-width: 50%;
}
.repl.sidecar-visible .repl-block .fifty-fifty, tab:not(.sidecar-full-screen) sidecar .fifty-fifty {
    max-width: unset;
    margin-right: unset;
}
.sidecar-visible .result-table .entity {
    /* in either one-column mode, or if the sidecar is visible, have list entries occupy a full row */
    padding-right: 0;
}
.entity-rule-status {
    width: 7em;
}
.sidecar-visible .repl-result.one-column .package-prefix {
    max-width: 35%;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}
.result-table .entity {
    display: table-row-group;
}
.entity-attributes {
    display: table-row;
    height: 3em;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

/* row selection */
.row-selection-context.selected-row .selected-entity {
    font-size: 1.25em;
    color: var(--color-brand-03);
    animation: selected-pulse 300ms 3;
    transition: all 150ms ease-in-out;
}
.row-selection-context:not(.selected-row) .selected-entity {
    opacity: 0.1;
    transition: opacity 300ms ease-in-out;
}
.row-selection-context:not(.selected-row):hover .selected-entity {
    opacity: 0.5;
}

.entity:first-child .entity-attributes > span {
    border-top: none;
}
.entity-attributes > span {
    display: table-cell;
    vertical-align: middle;
    padding: 0 0.375em;
    border-top: 1px solid var(--color-ui-04);
    transition: all 300ms ease-in-out;
}
.entity .entity-kind {
    min-width: 7em;
}
.repl.sidecar-visible .entity .entity-kind {
    width: 8em;
}
/* ... */

